# tinyhttpd

./: CMakeLists.txt  README.md
include/: master.h  worker.h
src/: main.cpp  master.cpp  worker.cpp
